Self replicating bacteria